# doxx

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dezel/dowwapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/dezel/dowwapp/: ExampleUnitTest.java
renderer/: CMakeLists.txt  build.gradle
renderer/cmake/: FindVulkanHpp.cmake
renderer/src/androidTest/java/com/dezel/renderer/: ExampleInstrumentedTest.java
renderer/src/main/: AndroidManifest.xml
renderer/src/main/cpp/: renderer.cpp
renderer/src/test/java/com/dezel/renderer/: ExampleUnitTest.java
